objects/ssot__ViolationEnforcementAction__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CaseProceedingResultId__c</fullName>
        <label>Case Proceeding Result</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ComplianceDueDateTime__c</fullName>
        <label>Compliance Due Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDateTime__c</fullName>
        <label>Created Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DaysOpenCount__c</fullName>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Violation Enforcement Action Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RegulatoryCodeViolationId__c</fullName>
        <label>Regulatory Code Violation</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ResolutionNotes__c</fullName>
        <label>Resolution Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ResolvedDateTime__c</fullName>
        <label>Resolved Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ViolationEnforcementActionPriority__c</fullName>
        <label>Violation Enforcement Action Priority</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ViolationEnforcementActionStatus__c</fullName>
        <label>Violation Enforcement Action Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ViolationEnforcementActionType__c</fullName>
        <label>Violation Enforcement Action Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1718545867155_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ViolationEnforcementAction_Regulator_rel</label>
        <referenceTo>ssot__RegulatoryCodeViolation__dlm</referenceTo>
        <relationshipLabel>ViolationEnforcementAction_Regulator_rel</relationshipLabel>
        <relationshipName>rel_1718545867155_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1718549030739_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ViolationEnforcementAction_CaseProce_rel</label>
        <referenceTo>ssot__CaseProceedingResult__dlm</referenceTo>
        <relationshipLabel>ViolationEnforcementAction_CaseProce_rel</relationshipLabel>
        <relationshipName>rel_1718549030739_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>